# glict

./: .gitignore  BUILD  BUILD.libsdl12  GLICT2.sln  GLICT2.vcproj  README.md  WORKSPACE  x11-helper.bzl
.github/workflows/: c-cpp.yml
branches/glict2/: AUTHORS  COPYING  GLICT2.vcproj  README
glict/: BUILD  Doxyfile  GLICT.cbp  GLICT.sln  GLICT.vcproj  GLICTce.vcproj  Makefile  Makefile.am  README  button.cpp  button.h  configure.ac  container.cpp  container.h  docs.txt  exchndl2.cxx  globals.cpp  globals.h  glut-helper.cpp  glut-helper.h  history.txt  main.cpp  messagebox.cpp  messagebox.h  panel.cpp  panel.h  readme.txt  release.sh  sdldemo.cpp  sdlfont.h  snippets.txt  texload.c  texload.cpp  texload.h  types.h  window.cpp  window.h  winfont.cpp  winfont.h
glict/GLICT/: BUILD  Makefile  Makefile.am  button.cpp  button.h  container.cpp  container.h  fonts.cpp  fonts.h  globals.cpp  globals.h  glut-helper.cpp  glut-helper.h  image.h  list.cpp  list.h  messagebox.cpp  messagebox.h  panel.cpp  panel.h  progressbar.cpp  progressbar.h  scrollbar.cpp  scrollbar.h  skinner.cpp  skinner.h  textbox.cpp  textbox.h  types.h  window.cpp  window.h
glict/debian/: control
glict/examples/: readme.txt
glict/examples/memory/: glut-helper.cpp  main.cpp
glict/examples/memory_sdl/: BUILD  main.cpp  sdlfont.h
glict/mac/: GLICT_Prefix.pch
glict/mac/GLICT.xcodeproj/: ivucica.mode1v3  ivucica.pbxuser  project.pbxproj
src/GLICT/: container.h  eventhandler.cpp  eventhandler.h
tools/: bazel.rc
trunk/glict/: AUTHORS  Doxyfile  GLICT.DevPackage  GLICT.cbp  GLICT.sln  NEWS  (+26 more)
(+49 files in other folders)
