lib_LIBRARIES = libGLICT.a
libGLICT_a_includedir=$(includedir)/GLICT
#libGLICT_a_configdir = $(libdir)/GLICT/include
#libGLICT_a_config_DATA = config.h
libGLICT_a_SOURCES =  \
button.cpp \
container.cpp \
fonts.cpp \
globals.cpp \
list.cpp \
messagebox.cpp \
panel.cpp \
progressbar.cpp \
scrollbar.cpp \
skinner.cpp \
textbox.cpp \
window.cpp

libGLICT_a_include_HEADERS = \
button.h \
container.h \
fonts.h \
globals.h \
image.h \
list.h \
messagebox.h \
panel.h \
progressbar.h \
scrollbar.h \
skinner.h \
textbox.h \
types.h \
window.h
